log
Wed 03 May 2023 06:00:33 PM UTC: 
 tests:  0|5
total_score: 0/70
ae82556
Wed 03 May 2023 06:23:37 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:63:36: error: expected ‘;’ before ‘:’ token
   63 |               pushBack(list, nuevo):
      |                                    ^
      |                                    ;
Compilation failed
293d7ef
Wed 03 May 2023 06:23:44 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8dc9aff
Wed 03 May 2023 06:24:26 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d7c389d
Wed 03 May 2023 06:33:11 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:58:13: error: unused variable ‘k’ [-Werror=unused-variable]
   58 |         int k=3*(i%3) + (j%3) ;
      |             ^
sudoku.c:57:13: error: unused variable ‘p’ [-Werror=unused-variable]
   57 |         int p=3*(i/3) + (j/3) ;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
4dd7393
Wed 03 May 2023 06:33:20 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
6dd0cb8
Wed 03 May 2023 06:44:37 PM UTC: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:61:14: error: unused variable ‘m’ [-Werror=unused-variable]
   61 |          int m=3*(k%3) + (p%3) ;
      |              ^
sudoku.c:60:14: error: unused variable ‘l’ [-Werror=unused-variable]
   60 |          int l=3*(k/3) + (p/3) ;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
9b518df
Wed 03 May 2023 06:45:03 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
9f06e01
Wed 03 May 2023 06:47:51 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
f271f1b
Wed 03 May 2023 06:51:11 PM UTC: 
 sudoku.c | 21 ++++++++++++---------
 1 file changed, 12 insertions(+), 9 deletions(-)
 tests:  2|4
total_score: 15/70
37ce3ba
Wed 03 May 2023 06:51:54 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
c3834c9
Wed 03 May 2023 06:55:40 PM UTC: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
bc4d389
Wed 03 May 2023 06:57:06 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
73f1af2
Wed 03 May 2023 07:00:35 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
bc8b3fb
Wed 03 May 2023 07:01:50 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
76a67cc
Wed 03 May 2023 07:03:04 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:116:4: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
  116 |    for(int i = 0; i < 9; i++)
      |    ^~~
sudoku.c:119:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
  119 |     return 1;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
39fd5b8
Wed 03 May 2023 07:03:26 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:116:4: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
  116 |    for(int i = 0; i < 9; i++)
      |    ^~~
sudoku.c:120:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
  120 |     return 1;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
7935984
Wed 03 May 2023 07:03:51 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|1
total_score: 55/70
a346b24
Wed 03 May 2023 07:07:49 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  7|1
total_score: 55/70
9fcf7eb
Wed 03 May 2023 07:11:46 PM UTC: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
8ee6a21
Wed 03 May 2023 07:12:38 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|1
total_score: 60/70
04efe43
Wed 03 May 2023 07:14:36 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|1
total_score: 60/70
67dc4fe
Wed 03 May 2023 07:16:36 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|1
total_score: 60/70
c164898
Wed 03 May 2023 07:18:41 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|1
total_score: 60/70
d04cbef
Wed 03 May 2023 07:19:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
a4f6567
Wed 03 May 2023 07:22:36 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
881f881
Thu 04 May 2023 02:49:09 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:142:13: error: unused variable ‘i’ [-Werror=unused-variable]
  142 |       Node* i = first(lista);
      |             ^
test.c: At top level:
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:156:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  156 | int main( int argc, char *argv[] ){
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
de1de3e
Thu 04 May 2023 02:49:19 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:142:13: error: unused variable ‘i’ [-Werror=unused-variable]
  142 |       Node* i = first(lista);
      |             ^
cc1: all warnings being treated as errors
Compilation failed
b8d7057
Thu 04 May 2023 02:49:48 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
4045b1a
Thu 04 May 2023 02:54:58 PM UTC: 
 sudoku.c | 53 +++++++++++++++++++++++++++--------------------------
 1 file changed, 27 insertions(+), 26 deletions(-)
 tests:  10|0
total_score: 70/70
66e3692
Thu 04 May 2023 02:55:53 PM UTC: 
 sudoku.c | 56 +++++++++++++++++++++++++-------------------------------
 1 file changed, 25 insertions(+), 31 deletions(-)
 tests:  8|1
total_score: 60/70
f7293dd
Thu 04 May 2023 02:59:57 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
444c534
Thu 04 May 2023 03:00:47 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|0
total_score: 70/70
a129786
